--- a/latex/main.tex
+++ b/latex/main.tex
@@ -173,7 +173,7 @@ where the $\overset{\circ}{\boldsymbol{\sigma}}$ denotes the Jaumann rate of the
     \mathbb{D} \Delta\tilde{\boldsymbol{\varepsilon}}^e
 \end{equation}
 
-To be able to rotate the quentities back and forth, we need to determine the $\boldsymbol{Q}$ rotation tensor in each step, which can be calculated from the $\boldsymbol{w}$ spin tensor as
+To be able to rotate the quantities back and forth, we need to determine the $\boldsymbol{Q}$ rotation tensor in each step, which can be calculated from the $\boldsymbol{w}$ spin tensor as
 
 \begin{equation}
     \dot{\boldsymbol{Q}} = \boldsymbol{w}\boldsymbol{Q},
@@ -261,7 +261,7 @@ for n in range(N-1):
 
 \subsection*{5 increments per step}
 
-The values of the plotted quentities are also attached as a CSV file.
+The values of the plotted quantities are also attached as a CSV file.
 
 \begin{figure}[h]
     \centering
@@ -274,7 +274,7 @@ The values of the plotted quentities are also attached as a CSV file.
 
 \subsection*{1000 increments per step}
 
-The values of the plotted quentities are also attached as a CSV file.
+The values of the plotted quantities are also attached as a CSV file.
 
 \begin{figure}[h]
     \centering
